# 3D-print

./: .gitignore  AGENTS.md  Makefile  Phanteks_HDD_cover_cp2077-v2.stl  README.md  box-rack.scad  cable_hook_v2.scad  common.py  cyberpunk.scad  drzaky_na_panev.dxf~  esp13.scad  filament_hose_joint.scad  filament_label.py  filament_tube_adaptor.scad  gardena_connector.py  gunbox.scad  houpacka_pro_projektor.py  kastlik_na_hracky_do_vany.scad  kolecko_k_aku_baterce.py  kolicek.scad  korenky.scad  kulete_police_do_kuchyne.dxf~  kytara.3mf  lampicka.scad  lampicka_IR.py  lampicka_viki_IR.py  objimka_vrtacky.scad  octodash.scad  phone_holder.py  phone_holder.scad  plnicka_ppk.scad  power_source_holder.scad  propeller.scad  pyproject.toml  radka_kvetinace.scad  raibird-rain-sensor.scad  rainbird_wrench.scad  rainbirs_wrench.scad  reprobedna.dxf  reprobedna.dxf~  (+24 more)
3D_printer_stuff/: filament_label.py  filament_labels.scad  printer_toolbox.scad  scraper_hook.scad  spool_box_adapter.scad  tube_holder.py
airsoft/: terc.scad
electronics/: houpacka_pro_projektor.py  rpi.scad
esp8266/: esp1.scad  esp7.scad  jsn_hat.scad
hydroponie/: controller_case.py  proticakaci_tycky.py
irrigation/: rainbird_hose_T_connector.py  rainbird_hose_connector_common.py
kitchen/: README.md  drzaky_na_panev.dxf  kocici_podtacky.3mf  korenky.scad  kulate_police_do_kuchyne.dxf  plato.jscad  viko.py
maverick/: suspension.scad
mazda6/: README.md
naradi/: dremel_sotrage.scad  kolecko_k_aku_baterce.py  kolecko_k_baterce.scad  motor_holder.scad  objimka_vrtacky.scad  pruzina_do_sekacky.scad  (+2 more)
(+58 files in other folders)
