[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3d-print-models"
version = "0.1.0"
description = "Parametric 3D print models using CadQuery"
requires-python = ">=3.10"

dependencies = [
    "cadquery",
    "git+https://github.com/meadiode/cq_gears.git@main",
    "vtk",
    "cadquery-massembly",
    "cadquery-vtk",
    "git+https://github.com/gumyr/cq_warehouse.git#egg=cq_warehouse"
]
