[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3d-print-models"
version = "0.1.0"
description = "Parametric 3D print models using CadQuery"
requires-python = ">=3.10"

dependencies = [
    "cadquery",
    "vtk",
    "cadquery-massembly",
    "cadquery-vtk",
    "cq_gears @ git+https://github.com/meadiode/cq_gears.git",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["common.py"]
